--- a/src/Scss/style.css
+++ b/src/Scss/style.css
@@ -37,6 +37,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  background-color: red;
 }
 
 .container .questions .question {
