--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -10,6 +10,7 @@
     width: 60%;
     display: flex;
     flex-wrap: wrap;
+    background-color: red;
     .question {
       width: 300px;
       height: 80px;
