--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -2,15 +2,56 @@
 
 .container {
   width: 100%;
-  height: 500px;
+  height: 700px;
   background: #93a8ac;
   display: flex;
   overflow: hidden;
+
+  .result-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+    h5 {
+      margin-bottom: 20px;
+      margin-top: 20px;
+    }
+
+    button {
+      width: 170px;
+      height: 70px;
+      text-align: center;
+      margin-left: auto;
+      font-size: 30px;
+      border-radius: 20px;
+      align-self: center;
+      margin-bottom: 30px;
+      background-color: #d7ceb2;
+      border: black solid;
+    }
+  }
+
+  .result-title {
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 40px;
+  }
+
+  .result-many-q {
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+  }
+
   .questions {
     width: 60%;
     display: flex;
     flex-wrap: wrap;
-    background-color: red;
+
     .question {
       width: 300px;
       height: 80px;
@@ -27,44 +68,131 @@
       }
     }
   }
-  .inputs {
+  .wrapper {
     width: 40%;
     display: flex;
-    justify-content: flex-end;
-    padding: 2%;
+    flex-direction: column;
+    align-items: flex-end;
 
-    input {
-      background: #4c5760;
-      font-size: 25px;
-      height: 50px;
-      outline: 0;
-      border: none;
-      border-radius: 5px;
-      padding: 10px;
-      direction: rtl;
-      color: white;
+    .start-quiz {
+      width: 90px;
+      height: 70px;
+      font-size: 20px;
+      border-radius: 20px;
+      align-self: center;
+      background-color: #d7ceb2;
+      border: black solid;
     }
-    button {
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 26px;
-      color: #ffffff;
-      background: rgba(0, 0, 0, 0.72);
-      border-radius: 8px;
-      margin-right: 10px;
-      padding: 10px;
-      outline: none;
-      border: none;
-      border-radius: 5px;
-      transition: 0.2s ease-in-out;
 
-      &:hover {
-        color: rosybrown;
+    .inputs {
+      width: 40%;
+      display: flex;
+      justify-content: flex-end;
+      padding: 2%;
+
+      input {
+        background: #4c5760;
+        font-size: 25px;
+        height: 50px;
+        outline: 0;
+        border: none;
+        border-radius: 5px;
+        padding: 10px;
+        direction: rtl;
+        color: white;
       }
-      &:active {
-        transform: scale(0.5);
+      button {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 26px;
+        color: #ffffff;
+        background: rgba(0, 0, 0, 0.72);
+        border-radius: 8px;
+        margin-right: 10px;
+        padding: 10px;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        transition: 0.2s ease-in-out;
+
+        &:hover {
+          color: rosybrown;
+        }
+        &:active {
+          transform: scale(0.5);
+        }
       }
+    }
+
+    .start-quiz-span {
+      margin: auto 40px 30px;
+
+      button {
+        width: 150px;
+        height: 60px;
+        border-radius: 20px;
+        font-size: 20px;
+      }
+    }
+  }
+}
+
+.container2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 500px;
+  background: #93a8ac;
+
+  .next-q {
+    width: 90px;
+    height: 70px;
+    text-align: center;
+    font-size: 30px;
+    border-radius: 20px;
+    align-self: center;
+    margin-bottom: 30px;
+    background-color: #d7ceb2;
+    border: black solid;
+  }
+
+  .next-question {
+    height: 100px;
+    width: 200px;
+    font-size: 30px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+  }
+
+  .question-name {
+    margin-top: 30px;
+    font-size: 40px;
+  }
+
+  .answers-list {
+    height: 100%;
+    margin: auto;
+    margin-top: 100px;
+  }
+
+  .answer-button {
+    width: 200px;
+    height: 100px;
+    text-align: center;
+    margin: 20px;
+    border-radius: 20px;
+    font-size: 25px;
+    transition: 0.1s ease-in-out;
+
+    &:hover {
+      border: black 2 solid;
+    }
+
+    &:active {
+      transform: scale(0.8);
     }
   }
 }
